--- a/style.css
+++ b/style.css
@@ -172,10 +172,32 @@ main {
     }
 }
 
+@keyframes slider-logo {
+	from { 
+        transform: translateX(0); 
+    }
+	to { 
+        transform: translateX(-100%);
+    }
+}
+
 .slider {
 	background: var(--base-color-BlackLight);
 	box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .125);
 	height: 90px;
+	overflow:hidden;
+	position: relative;
+	width: auto;
+
+    display: flex;
+
+}
+
+.slider-logo {
+	background: var(--base-color-Blue);
+	box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .125);
+	height: 6rem;
+    width: 100%;
 	overflow:hidden;
 	position: relative;
 	width: auto;
@@ -194,6 +216,15 @@ main {
 
 }
 
+.carrosel-logo {
+    display: flex;
+    align-items: center;
+    box-shadow: 0px 10px 20px -5px var(--base-color-Black);
+
+    transform: translate(1, 100%);
+
+}
+
 
 .slide-track {
     display: flex;
@@ -202,7 +233,23 @@ main {
 
 }
 
+.slide-track-logo {
+    display: flex;
+    flex-direction: row;
+    animation: 20s slider infinite linear;
+
+}
+
 .slide {
+    display: flex;
+    flex-direction: row;
+
+    width: 100%;
+    gap: 2rem;
+
+}
+
+.slide-logo {
     display: flex;
     flex-direction: row;
 
@@ -228,6 +275,14 @@ main {
     margin-top: 2.5rem;
 }
 
+.slide-logo img {
+    height: 3rem;
+    width: auto;
+
+    margin: 1rem;
+    padding-left: 4rem;
+}
+
 .sou-eu {
     background: var(--base-color-White);
     
@@ -235,7 +290,7 @@ main {
 
 .content {
     max-width: 100%;
-    margin: auto;
+    height: 12rem;
     padding: 15rem 10rem;
 
     display: flex;
